--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,30 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* header */
+.bg-header {
+    background-color: #013B94;
+    padding: 30px 0px;
+}
+
+.dimensioni-logo {
+    width: 50%;
+}
+
+#color {
+    color: white;
+    text-decoration: none;
+}
+
+li {
+    padding: 10px 15px;
+    border-radius: 50px;
+}
+
+li:hover {
+    background-color: #234E9E;
+
+}
+
+/* footer */
